static/less/bibview.less
/* BIB MODAL START ------------------------- */

.bibview.modal-body {
  background: url(/static/img/bg.png);
}

.bibview {

	.valuedisplay {
	  border: 0px solid @grey-light;
	}
	.database {
		display: block;
		padding-top: 5px;
	}
	.value {
		padding: 10px 3px 10px 3px;
		border: dotted @grey-light;
		border-width: 1px 0px 0px 0px;
	}
	.value-error {
		border-bottom: 1px dashed red;
	}
	ul {
		list-style: none;
		display: inline-block;
		margin-bottom: 0px;
	}
	.node {
		list-style-type: square;
	}
	.node.auth {
		list-style: none;
		margin-left: -1.65em;
	}
	.node.lang {
		list-style: none;
		margin-left: -2.2em;
		margin-bottom: 0.2em;
	}
	.summary {
		text-align: justify;
		width: 50em;
		padding: 0em 3em 0em 3em;
	}
	.lbl {
		vertical-align: top;
	  font-weight: bold;
	  display: inline-block;
	  width: 170px;
	}
	h4 {
  font-weight: bold;
  color: @green;
	}
}

.bibview.modal-footer {
  background-color: rgba(108, 108, 108, 0.1);
  box-shadow: 0px 0px 35px -10px rgba(0, 0, 0, 0.52);
  margin: 0px;
  padding: 10px 20px;
}

.modificationdates {
	margin: 6px;
}
.modificationdates td:first-of-type {
	width: 100px;
}

/* BIB MODAL END ------------------------- */

